--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
                             <img src="img/logo.svg" alt="">
                         </div>
 
+                        <img id="small-logo" src="img/logo-small.svg" alt="">
+                        <img id="home-secret" src="img/home.svg" alt="">
+                        <img id="search-secret" src="img/search.svg" alt="">
+                        <img id="libreria-secret" src="img/libreria.svg" alt="">
+
                         <div class="nav">
                            <div class="cont">
                                 <div class="menu-container">
                                     <img src="img/home.svg" alt="">
                                 </div>
-
+                                
                                 <div>
                                     Home
                                 </div>
@@ -109,10 +114,13 @@
                                 Installa app 
                             </div>
                         </div>
-                        
+
+                        <i id="secret-icon" class="fa-regular fa-circle-down"></i>
+                        <img id="secret-user" src="img/profile.svg" alt="">
+
                         <div class="app">
                             <div>
-                                <img id="profile" src="img/profile.svg" alt="">
+                                <img id="user" src="img/profile.svg" alt="">
                             </div>
                             <div>
                                 John Doe
@@ -232,11 +240,11 @@
                 <div class="footer">
                     <div class="album">
                         <div class="player-img">
-                            <img src="img/player_left.jpg" alt="">
+                            <img src="https://upload.wikimedia.org/wikipedia/en/3/35/Akon-Lonely.jpg" alt="">
                         </div>
                         <div class="song">
-                            <div>Sinister</div>
-                            <div>Brano Nome</div>
+                            <div>Akon</div>
+                            <div>Lonely</div>
                         </div>
                         <div class="icons">
                             <i class="fa-regular fa-heart footer-icons"></i>
